--- a/main.html
+++ b/main.html
@@ -7,7 +7,18 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class = "container">
+		<div class = "green">
+			3
+		</div>
+		
+		<div class = "red">
+			1
+		</div>
+		<div class = "blue">
+			2
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
